--- a/11 mar 2025/studentcr/studentcrud/src/main/resources/templates/student/edit.html
+++ b/11 mar 2025/studentcr/studentcrud/src/main/resources/templates/student/edit.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Student</title>
+    <title>Edit Student</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="w-50">
-            <h1 class="mt-5 text-center">Create Student</h1>
-            <form th:action="@{/users/save}" th:object="${student}" method="post" class="mt-3">
+            <h1 class="mt-5 text-center">Edit Student</h1>
+            <form th:action="@{/users/update/{id}(id=${student.id})}" th:object="${student}" method="post" class="mt-3">
+                <input type="hidden" th:field="{id}">
                 <div class="form-group">
                     <label for="studentName">Name</label>
                     <input type="text" class="form-control" id="studentName" th:field="*{name}" placeholder="Enter student name">
