--- a/11 mar 2025/studentcr/studentcrud/src/main/resources/templates/employee/edit.html
+++ b/11 mar 2025/studentcr/studentcrud/src/main/resources/templates/employee/edit.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Student</title>
+    <title>Create Employee</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="w-50">
-            <h1 class="mt-5 text-center">Edit Student</h1>
-            <form th:action="@{/users/update/{id}(id=${student.id})}" th:object="${student}" method="post" class="mt-3">
+            <h1 class="mt-5 text-center">Edit Employee</h1>
+            <form th:action="@{/sudeep/update/{id}(id=${employee.id})}" th:object="${employee}" method="post" class="mt-3">
                 <input type="hidden" th:field="*{id}">
                 <div class="form-group">
-                    <label for="studentName">Name</label>
-                    <input type="text" class="form-control" id="studentName" th:field="*{name}" placeholder="Enter student name">
+                    <label for="employeeName">Name</label>
+                    <input type="text" class="form-control" id="employeeName" th:field="*{name}" placeholder="Enter employee name">
                 </div>
                 <div class="form-group">
-                    <label for="studentEmail">Email</label>
-                    <input type="email" class="form-control" id="studentEmail" th:field="*{email}" placeholder="Enter student email">
+                    <label for="employeeEmail">Email</label>
+                    <input type="email" class="form-control" id="employeeEmail" th:field="*{email}" placeholder="Enter employee email">
                 </div>
                 <div class="form-group">
-                    <label for="studentAge">Phone</label>
-                    <input type="number" class="form-control" id="studentPhone" th:field="*{phone}" placeholder="Enter student Phone">
+                    <label for="employeeAge">Phone</label>
+                    <input type="number" class="form-control" id="employeePhone" th:field="*{phone}" placeholder="Enter employee Phone">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
             </form>
