--- a/11 mar 2025/studentcr/studentcrud/src/main/resources/templates/employee/index.html
+++ b/11 mar 2025/studentcr/studentcrud/src/main/resources/templates/employee/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+  
 <head>
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
@@ -8,10 +9,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
+  <div th:replace="fragments/nav :: menu"></div>
 <div class="container mt-3">
     <h2>Employee List</h2>
     <a th:href="@{/sudeep/create}" class="btn btn-warning m-3">Add Employee</a>
+    <a th:href="@{/users/create}" class="btn btn-warning m-3">Add Student</a>
 
     <table class="table table-success table-striped">
     <thead class="table-dark">
@@ -19,7 +21,11 @@
         <th>ID</th>
         <th>Name</th>
         <th>Email</th>
-        <th>phone</th>
+        <th>Phone</th>
+        <th>Dob</th>
+        <th>Address</th>
+        <th>Gender</th>
+        <th>Employeeshift</th>
         <th>Action</th>
       </tr>
     </thead>
@@ -29,9 +35,13 @@
         <td  th:text="${emp.name}"></td>
         <td  th:text="${emp.email}"></td>
         <td  th:text="${emp.phone}"></td>
+        <td  th:text="${emp.dob}"></td>
+        <td  th:text="${emp.address}"></td>
+        <td  th:text="${emp.gender}"></td>
+        <td  th:text="${emp.employeeshift}"></td>
         <td>
-          <a th:href="@{/users/edit/{id}(id=${emp.id})}" class="btn btn-primary">Edit</a>
-          <a th:href="@{/users/delete/{id}(id=${emp.id})}" class="btn btn-danger">Delete</a>
+          <a th:href="@{/sudeep/edit/{id}(id=${emp.id})}" class="btn btn-primary">Edit</a>
+          <a th:href="@{/sudeep/delete/{id}(id=${emp.id})}" class="btn btn-danger">Delete</a>
         </td>
       </tr>
     </tbody>
