--- a/11 mar 2025/studentcr/studentcrud/src/main/resources/templates/staff/edit.html
+++ b/11 mar 2025/studentcr/studentcrud/src/main/resources/templates/staff/edit.html
@@ -4,26 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Student</title>
+    <title>Edit Staff</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div th:replace="fragments/nav :: menu"></div>
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="w-50">
-            <h1 class="mt-5 text-center">Create Student</h1>
-            <form th:action="@{/users/save}" th:object="${student}" method="post" class="mt-3">
+            <h1 class="mt-5 text-center">Edit Staff</h1>
+            <form th:action="@{/staff/save}" th:object="${staff}" method="post" class="mt-3">
                 <div class="form-group">
-                    <label for="studentName">Name</label>
-                    <input type="text" class="form-control" id="studentName" th:field="*{name}" placeholder="Enter student name">
+                    <label for="Name">Name</label>
+                    <input type="text" class="form-control" id="staffName" th:field="*{name}" placeholder="Enter staff name">
                 </div>
                 <div class="form-group">
-                    <label for="studentEmail">Email</label>
-                    <input type="email" class="form-control" id="studentEmail" th:field="*{email}" placeholder="Enter student email">
+                    <label for="staffEmail">Email</label>
+                    <input type="email" class="form-control" id="staffEmail" th:field="*{email}" placeholder="Enter staff email">
                 </div>
                 <div class="form-group">
-                    <label for="studentAge">Phone</label>
-                    <input type="number" class="form-control" id="studentPhone" th:field="*{phone}" placeholder="Enter student Phone">
+                    <label for="staffPhone">Phone</label>
+                    <input type="number" class="form-control" id="staffPhone" th:field="*{phone}" placeholder="Enter staff Phone">
+                </div>
+                <div class="form-group">
+                    <label for="profilepic">profilepic</label>
+                    <input type="file" class="form-control-file" id="profilepic" th:field="*{profilepic}">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Submit</button>
             </form>
