--- a/11 mar 2025/studentcr/studentcrud/src/main/resources/templates/student/edit.html
+++ b/11 mar 2025/studentcr/studentcrud/src/main/resources/templates/student/edit.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <div th:replace="fragments/nav :: menu"></div>
     <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
         <div class="w-50">
             <h1 class="mt-5 text-center">Edit Student</h1>
